2011-04-27  Mark Pilgrim  <pilgrim@chromium.org>

Reviewed by Tony Chang.

        IndexedDB object store deleting entry should fail if key is null
        https://bugs.webkit.org/show_bug.cgi?id=58614

        * storage/indexeddb/mozilla: Added.
        * storage/indexeddb/mozilla/key-requirements-delete-null-key-expected.txt: Added.
        * storage/indexeddb/mozilla/key-requirements-delete-null-key.html: Added.
2011-04-27  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB object store delete should fail if key is null
        https://bugs.webkit.org/show_bug.cgi?id=58614

        Test: storage/indexeddb/mozilla/key-requirements-delete-null-key.html

        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::IDBObjectStoreBackendImpl::deleteFunction):

Canonical link: https://commits.webkit.org/74862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85145 268f45cc-cd09-0410-ab3c-d52691b4dbfc